# Strange-Entanglements

./: CMakeLists.txt
extensions/: CMakeLists.txt
extensions/strange-entanglements-cpp/: CMakeLists.txt  StrangeQuantumState.cpp  StrangeQuantumState.h  StrangeSuperposition.cpp  StrangeSuperposition.h  register_types.cpp
game/: icon.svg.import  project.godot  qubit_orbit.gd  qubit_orbit.gd.uid
game/assets/: tile_set.tres
game/assets/fonts/fabada/: Fabada-regular.otf.import
game/assets/fonts/unageo/ttf/: Unageo-Black-Italic.ttf.import  Unageo-Bold-Italic.ttf.import  Unageo-Bold.ttf.import  Unageo-ExtraBold-Italic.ttf.import  Unageo-ExtraBold.ttf.import  Unageo-Light-Italic.ttf.import  Unageo-Light.ttf.import  Unageo-Medium.ttf.import  Unageo-Regular.ttf.import  Unageo-SemiBold.ttf.import
game/assets/fonts/unageo/variable/: Unageo[wght,ital].ttf.import  Unageo[wght].ttf.import
game/assets/sfx/kenney_interface-sounds/: back_003.ogg.import  bong_001.ogg.import  click_003.ogg.import  click_004.ogg.import  close_001.ogg.import  close_004.ogg.import  drop_001.ogg.import  drop_002.ogg.import  error_003.ogg.import  error_004.ogg.import  error_005.ogg.import  error_006.ogg.import  error_007.ogg.import  glass_001.ogg.import  glitch_001.ogg.import  glitch_002.ogg.import  maximize_002.ogg.import  maximize_005.ogg.import  maximize_007.ogg.import  maximize_008.ogg.import  minimize_003.ogg.import  minimize_004.ogg.import  minimize_005.ogg.import  minimize_006.ogg.import  minimize_008.ogg.import  minimize_009.ogg.import  open_003.ogg.import  open_004.ogg.import  pluck_001.ogg.import  question_002.ogg.import  question_004.ogg.import  scroll_002.ogg.import  scroll_005.ogg.import  select_002.ogg.import  select_003.ogg.import  select_004.ogg.import  select_006.ogg.import  select_007.ogg.import  switch_002.ogg.import  switch_003.ogg.import  (+2 more)
game/scenes/: level.gd  level.gd.uid  level.tscn  qubit.gd  qubit.gd.uid  qubit.tscn  qubit_orbit.tscn  screen.gd  screen.gd.uid  screen_manager.gd  screen_manager.gd.uid  screen_manager.tscn  you.gd  you.gd.uid  you.tscn
game/scenes/tiles/: cnegative.tscn  cpositive.tscn  floor.tscn  hadamard.tscn  not.tscn
game/strange-entanglements/: .gitignore
game/strange-entanglements/assets/fonts/fabada/: Fabada-regular.ttf.import
game/strange-entanglements/assets/fonts/unageo/ttf/: Unageo-Black.ttf.import  Unageo-Medium-Italic.ttf.import  Unageo-Regular-Italic.ttf.import  Unageo-SemiBold-Italic.ttf.import
game/strange-entanglements/assets/fonts/unageo/variable/: Unageo-italic[wght].ttf.import
game/strange-entanglements/assets/sfx/kenney_interface-sounds/: back_001.ogg.import  back_002.ogg.import  back_004.ogg.import  click_001.ogg.import  click_002.ogg.import  click_005.ogg.import  close_002.ogg.import  close_003.ogg.import  confirmation_001.ogg.import  confirmation_002.ogg.import  confirmation_003.ogg.import  confirmation_004.ogg.import  drop_003.ogg.import  drop_004.ogg.import  error_001.ogg.import  error_002.ogg.import  error_008.ogg.import  glass_002.ogg.import  glass_003.ogg.import  glass_004.ogg.import  glass_005.ogg.import  glass_006.ogg.import  glitch_003.ogg.import  glitch_004.ogg.import  maximize_001.ogg.import  maximize_003.ogg.import  maximize_004.ogg.import  maximize_006.ogg.import  maximize_009.ogg.import  minimize_001.ogg.import  minimize_002.ogg.import  minimize_007.ogg.import  open_001.ogg.import  open_002.ogg.import  pluck_002.ogg.import  question_001.ogg.import  question_003.ogg.import  scratch_001.ogg.import  scratch_002.ogg.import  scratch_003.ogg.import  (+18 more)
